--- a/.librewolf/librewolf.overrides.cfg
+++ b/.librewolf/librewolf.overrides.cfg
@@ -1,3 +1,4 @@
 defaultPref("identity.fxaccounts.enabled", true);
 defaultPref("privacy.clearOnShutdown.history", false);
 defaultPref("privacy.clearOnShutdown.downloads", false);
+defaultPref("media.peerconnection.ice.no_host", false);
